--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
+    "sweetalert2": "^11.14.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
